# C-_Journal_API

./: CMakeLists.txt  README.md
include/: client_api.h  journal.h  server_api.h  utils.h
src/: client_api.cpp  journal.cpp  server_api.cpp  test_client_api.cpp  test_client_api_multi_user.cpp  test_server_api.cpp  utils.cpp
